--- a/src/components/CalMonth/calMonth.css
+++ b/src/components/CalMonth/calMonth.css
@@ -3,7 +3,7 @@
    height: 24px;
    display: flex;
    align-items: center;
-   justify-items: start;
+   justify-content: space-between;
    gap: 16px;
 
    & i {
@@ -13,11 +13,12 @@
    }
 
    & .current-date {
-      width: 80px;
+      width: 90px;
       height: 24px;
       display: flex;
       align-items: center;
       justify-content: space-between;
+      gap: 2px;
 
       & span {
          font-size: 16px;
