--- a/src/components/AuthForm/authForm.css
+++ b/src/components/AuthForm/authForm.css
@@ -42,6 +42,14 @@
          width: 16px;
          height: 16px;
          cursor: pointer;
+         display: flex;
+         justify-content: center;
+         align-items: center;
+
+         & img {
+            width: 16px;
+            height: 16px;
+         }
       }
    }
 
